versions/1.20.4/translated/ru_ru/players/installing-fabric.md
---
title: Установка Fabric
description: Пошаговая инструкция по установке Fabric.
authors:
  - IMB11

search: false
---

# Установка Fabric

В этом гайде мы расскажем вам об установке Fabric на официальный лаунчер Minecraft.

Для сторонних лаунчеров вам следует ознакомиться с их документацией.

## 1. Загрузка установщика Fabric

Вы можете загрузить установщик Fabric с [сайта Fabric](https://fabricmc.net/use/).

Если вы используете Windows, скачайте версию `.exe` (`Download For Windows`), потому что для неё не требуется Java в вашей системе. Вместо этого он использует версию Java из официального лаунчера.

Для macOS и Linux вам потребуется установить версию `.jar`. Иногда вам необходимо установить Java перед выполнением этого шага.

## 2. Запуск установщика Fabric

:::warning
Перед установкой закройте Minecraft и лаунчер.
:::

:::details Информация для пользователей macOS

На macOS вам может потребоваться щелкнуть правой кнопкой мыши на файл `.jar` и нажать `Открыть`, чтобы запустить его.

![Контекстное меню установщика Fabric на MacOS](/assets/players/installing-fabric/macos-downloads.png)

Когда вас спросят: "Вы уверены, что хотите это открыть?", нажмите `Открыть` ещё раз.
:::

Как только вы откроете установщик, вы должны увидеть экран, похожий на этот:

![Установщик Fabric с подсвеченным "Install"](/assets/players/installing-fabric/installer-screen.png)

Чтобы установить Fabric, просто выберите свою версию игры из списка и нажмите `Установить`.

**Убедитесь, что установлен флажок 'Создать профиль'.**

## 3. Готово!

Как только установка завершится, вы можете открыть лаунчер Minecraft, выбрать профиль Fabric из списка в левом нижнем углу и нажать Играть!

![Лаунчер Minecraft с выбранным профилем Fabric](/assets/players/installing-fabric/launcher-screen.png)

## Следующие шаги

Теперь, когда вы установили Fabric, вы можете добавлять моды в свою игру! Смотрите гайд [Поиск безопасных модов](./finding-mods) для большей информации.

Если вы столкнулись с какими-либо проблемами, попросите помощи в [дискорде Fabric](https://discord.gg/v6v4pMv) в канале `#player-support`.
